2009-01-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs: Don't try to update web.config
	when references are removed during project loading. Fixes "Bug 465852
	- MonoDevelop 2.0 (trunk) does not load ASP.NET projects from 1.0."

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetAddIn.mdp: All projects now require fx 3.5.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AspNet/WebTypeManager.cs:
	* MonoDevelop.AspNet/AspNetAppProject.cs:
	* MonoDevelop.AspNet/AspNetToolboxNode.cs:
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Track API
	changes.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetAddIn.mdp: Don't require a specific version of Mono.Addins.

2008-12-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Ignore
	PersistChildrenAttribute, as it does more harm than good. It's
	essentially the opposite of ParseChildrenAttribute, but it's often
	incorrectly set, whereas ParseChildrenAttribute is almost invariably
	correct. Also, assume that any property tagged with a
	TemplateContainerAttribute has an InnerProperty persistence mode.

2008-12-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Add TODO markers for
	ParseChildrenAttribute.ChildControlType support.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs: Implemented CanExecute.

	* MonoDevelop.AspNet.Gui/BrowserLauncher.cs: Track api changes.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel build.

2008-12-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.addin.xml: Set correct packing for Web deployment
	panel.

2008-12-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.addin.xml: Move options panels to more appropriate