@@ -1,3 +1,10 @@
+2009-01-16  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.AspNet/AspNetAppProject.cs: Add css, xhtml, html, htm to
+	the WebSubTypes enum. This means that their default build action is
+	"Content", so they get deployed by default. Should fix "Bug 466855 -
+	CSS files in App_Themes/theme_name/ are not deployed".
+
 2009-01-14  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.AspNet/AspNetAppProject.cs: Don't try to update web.config
